# barista

./: .gitignore  CMakeLists.txt  README.md  configure
cmake/: FindAtlas.cmake  FindGraphviz.cmake  FindKaldi.cmake
egs/: README.md
egs/3decoders/: actors.ini  graph.dot  pcm.list  run.sh
egs/case1/baseline/: baseline.sh  mfcc.conf  run.sh  test.hyp  test.ref  test.scp  test.tra  test.wer
egs/case1/benchmark/: benchmark.sh  pcm.list  run.sh  test.hyp  test.ref  test.tra
egs/case1/benchmark/conf/: actors.ini  graph.dot
egs/case2/: pcm.list  run.sh
egs/case2/conf/: actors.ini  graph.dot
egs/conf/: actors.ini  graph.dot
egs/data/: README.md  README.txt
egs/data/sample/: 440c0401.pcm  README.md
egs/demo/: README.md  filter1.txt  filter2.txt  pcm.list  run.sh
egs/demo/conf/: actors.ini  graph.dot
egs/feat/: README.md  cmvn.txt  delta.txt  log  mfcc.txt  pcm.txt  run.sh
egs/feat/conf/: actors.ini  graph.dot
egs/live/: README.md  live.hyp  run.sh
egs/live/conf/: actors.ini  graph.dot
egs/model/: README.txt
egs/models/: README.md
egs/test/: feats.ark  feats.scp  pcm.list  pcm2.list  test.scp  test.sh  test.tra
src/: CMakeLists.txt
src/base/: common.h  kaldi-type-info.h  module-base.cc  module-base.h
src/decoder/: faster-online-decoder.cc  faster-online-decoder.h
src/feat/: add-deltas.cc  add-deltas.h  apply-cmvn.cc  apply-cmvn.h  compute-mfcc-feats.cc  compute-mfcc-feats.h  filter.cc  filter.h
src/gmm/: gmm-decode-faster-online.cc  gmm-decode-faster-online.h
src/io/: command-line-interface.cc  command-line-interface.h  file-list-reader.cc  file-list-reader.h  matrix-writer.cc  matrix-writer.h  pcm-reader.cc  pcm-reader.h  portaudio-reader.cc  portaudio-reader.h  vector-writer.cc  vector-writer.h
tools/: Makefile  configure.patch  darwin_10_9.mk  install_graphviz.sh  install_kaldi.sh  install_libcppa.sh  install_portaudio.patch  irstlm.patch  libcppa.patch  makefile.patch  openfst.patch.2  sctk.patch
